[package]
name = "lure"
version = "0.5.0"
edition = "2024"
default-run = "lure"

[workspace.metadata.cargo-shear]
ignored = ["tonic"]

[workspace]
members = ["net", "tun"]

[dependencies]
anyhow = "1.0"
bytes = "1.10"
log = "0.4.27"
libc = "0.2"
net = { path = "net" }
num_cpus = "1.16"
tun = { path = "tun" }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["tokio", "http-proto", "reqwest-rustls-webpki-roots", "http-json"] }
dotenvy = "0.15"
opentelemetry-stdout = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["tokio", "tokio-stream", "rt-tokio", "http", "url"] }
serde = { version = "1.0", features = ["derive", "rc"] }
# tokio = { version = "1.27", features = ["full", "rt-multi-thread", "tracing"] }
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "tracing"] }
toml = "0.9"
async-trait = "0.1"
futures = "0.3"
# Use rustls to support fully-static musl builds (avoid system OpenSSL).
reqwest = { version = "0.13", default-features = false, features = ["stream", "gzip", "rustls", "json"] }
serde_json = "1.0"
governor = "0.10"
thiserror = "2.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["std"] }
getrandom = "0.4"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
hex = "0.4"
mimalloc = { version = "0.1", optional = true }
tonic = { version = "0.14", optional = true }
tokio-metrics = "0.4"
env_logger = "0.11"
fake_serialize = "0.1"
console-subscriber = "0.5"

[features]
# by default we build HTTP-only
default = ["mimalloc", "tokio_unstable"]
# if you want gRPC support, `cargo build --features grpc-tonic`
grpc-tonic = [
    "opentelemetry-otlp/tonic",
    "opentelemetry-otlp/grpc-tonic",
    "dep:tonic",
]
mimalloc = ["dep:mimalloc"]
tokio_unstable = []
verbose = []
packet-debug = ["net/packet-debug"]
uring = ["net/uring"]
ebpf = ["net/ebpf"]

[profile.release]
incremental = true

[profile.profiling]
inherits = "release"
opt-level = 3
debug = 2
lto = "thin"
codegen-unit = 4
panic = "abort"
incremental = false
strip = "none"
