[package]
name = "lure"
version = "0.5.3"
edition = "2024"
default-run = "lure"

[workspace]
members = ["net", "tun"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
bytes = "1.10"
log = "0.4.27"
libc = "0.2"
net = { path = "net" }
tun = { path = "tun" }
opentelemetry = { version = "0.31", default-features = false, features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["http-proto", "reqwest-rustls-webpki-roots", "metrics", "trace"] }
dotenvy = "0.15"
opentelemetry-stdout = { version = "0.31", default-features = false, features = ["metrics"], optional = true }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["metrics", "trace", "rt-tokio"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tokio = { version = "1.48", default-features = false, features = ["io-util", "macros", "rt-multi-thread", "signal", "sync", "time", "tracing"] }
toml = "1.1"
async-trait = "0.1"
futures = "0.3"
# Keep reqwest on rustls for static builds, but let other deps choose the
# crypto provider so we do not force aws-lc into the whole workspace.
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-no-provider", "stream"] }
serde_json = "1.0"
governor = { version = "0.10", default-features = false, features = ["dashmap", "quanta", "std"] }
thiserror = "2.0"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["std"] }
getrandom = "0.4"
subtle = "2.5"
hex = "0.4"
mimalloc = { version = "0.1", optional = true }
tokio-metrics = "0.4"
env_logger = "0.11"
fake_serialize = "0.1"
sentry = { version = "0.47.0", default-features = false, features = ["contexts", "panic", "rustls", "ureq"] }

[features]
# by default we build HTTP-only
default = ["mimalloc", "tokio_unstable"]
# if you want gRPC support, `cargo build --features grpc-tonic`
grpc-tonic = ["opentelemetry-otlp/grpc-tonic"]
mimalloc = ["dep:mimalloc"]
tokio_unstable = []
verbose = ["dep:opentelemetry-stdout"]
packet-debug = ["net/packet-debug"]
uring = ["net/uring"]

[profile.release]
incremental = true
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
opt-level = 3
debug = 2
lto = "thin"
codegen-units = 4
panic = "abort"
incremental = false
strip = "none"
