[package]
name = "tun"
version = "0.1.0"
edition = "2024"

[lib]
name = "tun"
path = "src/lib.rs"

[[bin]]
name = "minitun"
path = "src/bin/tun.rs"

[dependencies]
thiserror = "2.0"
net = { path = "../net" }
tokio = { version = "1.48", features = ["full", "rt-multi-thread", "tracing"] }
base64 = "0.22"
anyhow = "1.0"
hmac = "0.12"
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
